website/i18n/zh-CN/docusaurus-plugin-content-docs/version-3.0.1/swizzling.mdx
---
description: Customize your site's appearance through creating your own theme components
---

# 组件替换（Swizzling）

本节将介绍如何在 Docusaurus 中进行布局定制。

> 似曾相识...？

本节内容与[样式与布局](./styling-layout.mdx)类似，但这次我们将定制 React 组件本身，而非其外观样式。我们将讨论 Docusaurus 的核心概念：**组件替换（swizzling）**，该功能支持**更深度的站点定制**。

实际操作中，组件替换允许**用您自己的实现来替换主题组件**，主要包含两种模式：

- [**弹出（Ejecting）**](#ejecting)：创建原始主题组件的**副本**，您可对其进行**完全定制**
- [**包装（Wrapping）**](#wrapping)：创建原始主题组件的**包装器**，您可对其进行**功能增强**

<details>

<summary>Why is it called swizzling?</summary>

**The name comes from Objective-C and Swift-UI**: [method swizzling](https://pspdfkit.com/blog/2019/swizzling-in-swift/) is the process of changing the implementation of an existing selector (method).

**For Docusaurus, component swizzling means providing an alternative component that takes precedence over the component provided by the theme.**

You can think of it as [Monkey Patching](https://en.wikipedia.org/wiki/Monkey_patch) for React components, enabling you to override the default implementation. Gatsby has a similar concept called [theme shadowing](https://www.gatsbyjs.com/docs/how-to/plugins-and-themes/shadowing/).

To gain a deeper understanding of this, you have to understand [how theme components are resolved](./advanced/client.mdx#theme-aliases).

</details>

## 组件替换流程

### 概述

Docusaurus 提供了便捷的**交互式 CLI** 来替换组件。通常您只需记住以下命令：

```bash npm2yarn
npm run swizzle
```

该命令会在您的 `src/theme` 目录下生成新组件，生成结果类似以下示例：

<Tabs>
<TabItem value="Ejecting">

```jsx title="src/theme/SomeComponent.js"
import React from 'react';

export default function SomeComponent(props) {
  // You can fully customize this implementation
  // including changing the JSX, CSS and React hooks
  return (
    <div className="some-class">
      <h1>Some Component</h1>
      <p>Some component implementation details</p>
    </div>
  );
}
```

</TabItem>
<TabItem value="Wrapping">

```jsx title="src/theme/SomeComponent.js"
import React from 'react';
import SomeComponent from '@theme-original/SomeComponent';

export default function SomeComponentWrapper(props) {
  // You can enhance the original component,
  // including adding extra props or JSX elements around it
  return (
    <>
      <SomeComponent {...props} />
    </>
  );
}
```

</TabItem>
</Tabs>

要查看所有可替换主题和组件的概览，请运行：

```bash npm2yarn
npm run swizzle -- --list
```

使用 `--help` 查看所有可用 CLI 选项，或参考 [swizzle CLI 文档](./cli.mdx#docusaurus-swizzle)。

:::note

替换组件后，请**重启开发服务器**以使 Docusaurus 识别新组件。

:::

:::warning[建议保持安全边界]

请务必理解[哪些组件可以安全替换](#what-is-safe-to-swizzle)。某些组件是主题的**内部实现细节**。

:::

:::info

`docusaurus swizzle` 仅是帮助自动化替换组件的工具。您也可以手动创建 `src/theme/SomeComponent.js` 文件，Docusaurus 会[自动解析](./advanced/client.mdx#theme-aliases)。该命令背后并无特殊魔法！

:::

### 弹出（Ejecting） {#ejecting}

弹出主题组件是指**创建原始组件的副本**，您可对该副本进行**完全定制和重写**。

要弹出主题组件，可通过交互式 swizzle CLI 或使用 `--eject` 选项：

```bash npm2yarn
npm run swizzle [theme name] [component name] -- --eject
```

示例：

```bash npm2yarn
npm run swizzle @docusaurus/theme-classic Footer -- --eject
```

此操作会将当前 `<Footer />` 组件的实现复制到您站点的 `src/theme` 目录。此后 Docusaurus 将使用该副本而非原始组件。您现在可以完全重新实现 `<Footer>` 组件。

```jsx title="src/theme/Footer/index.js"
import React from 'react';

export default function Footer(props) {
  return (
    <footer>
      <h1>This is my custom site footer</h1>
      <p>And it is very different from the original</p>
    </footer>
  );
}
```

:::warning

弹出[**不安全**](#what-is-safe-to-swizzle)组件可能导致复制大量内部代码，这些代码现在需要您自行维护。当接收的 props 或使用的内部主题 API 发生变化时，可能增加 Docusaurus 升级的难度。

**尽可能优先选择[包装（wrapping）](#wrapping)**：需要维护的代码量更少。

:::

:::tip[重新替换]

在 Docusaurus 升级后，可通过重新运行弹出命令并使用 `git diff` 比较变更来保持弹出组件的更新。建议在文件顶部添加简短注释说明您所做的修改，以便在重新弹出后更轻松地重新应用这些更改。

:::

### 包装组件 {#wrapping}

包装主题组件是指**创建一个包裹层**围绕原始主题组件，从而对其进行**功能增强**。

要包装主题组件，可通过交互式swizzle CLI或使用`--wrap`选项实现：

```bash npm2yarn
npm run swizzle [theme name] [component name] -- --wrap
```

示例：

```bash npm2yarn
npm run swizzle @docusaurus/theme-classic Footer -- --wrap
```

这将在站点的`src/theme`目录创建包装组件。Docusaurus将使用`<FooterWrapper>`替代原始组件，您现在可以在原始组件周围添加自定义内容。

```jsx title="src/theme/Footer/index.js"
import React from 'react';
import Footer from '@theme-original/Footer';

export default function FooterWrapper(props) {
  return (
    <>
      <section>
        <h2>Extra section</h2>
        <p>This is an extra section that appears above the original footer</p>
      </section>
      <Footer {...props} />
    </>
  );
}
```

<details>
  <summary>What is this <code>@theme-original</code> thing?</summary>

Docusaurus uses [theme aliases](./advanced/client.mdx#theme-aliases) to resolve the theme components to use. The newly created wrapper takes the `@theme/SomeComponent` alias. `@theme-original/SomeComponent` permits to import original component that the wrapper shadows without creating an infinite import loop where the wrapper imports itself.

</details>

:::tip

包装主题是**[弹出组件](#ejecting)**之外的理想方案，可在不修改原始组件的情况下**扩展功能**。例如轻松为每篇博客添加评论系统：

```jsx title="src/theme/BlogPostItem.js"
import React from 'react';
import BlogPostItem from '@theme-original/BlogPostItem';
import MyCustomCommentSystem from '@site/src/MyCustomCommentSystem';

export default function BlogPostItemWrapper(props) {
  return (
    <>
      <BlogPostItem {...props} />
      <MyCustomCommentSystem />
    </>
  );
}
```

:::

## 安全组件范围 {#what-is-safe-to-swizzle}

> 能力越大，责任越大

部分主题组件属于主题的**内部实现细节**。虽然Docusaurus允许替换，但可能存在风险。

<details>

<summary>Why is it risky?</summary>

Theme authors (including us) might have to update their theme over time: changing the component props, name, file system location, types... For example, consider a component that receives two props `name` and `age`, but after a refactor, it now receives a `person` prop with the above two properties. Your component, which still expects these two props, will render `undefined` instead.

Moreover, internal components may simply disappear. If a component is called `Sidebar` and it's later renamed to `DocSidebar`, your swizzled component will be completely ignored.

**Theme components marked as unsafe may change in a backward-incompatible way between theme minor versions.** When upgrading a theme (or Docusaurus), your customizations might **behave unexpectedly**, and can even **break your site**.

</details>

swizzle CLI会为每个主题组件标注**三个安全等级**：

- **安全**：组件可安全替换，其公共API稳定，在主题**主版本**内不会发生破坏性变更
- **不安全**：组件属于主题实现细节，替换存在风险，在主题**次版本**中可能发生破坏性变更
- **禁止**：CLI会阻止替换操作，该组件设计上不允许被替换

:::note

某些组件可能允许包装，但禁止弹出替换。

:::

:::info

不必过度**畏惧替换不安全组件**，只需注意**破坏性变更**可能发生，在次版本升级时需手动调整定制内容。

:::

:::note[提交需求]

如果您有**必须替换不安全组件的强需求**，请[**在此提交报告**](https://github.com/facebook/docusaurus/discussions/5468)，我们将协作寻找使其安全的方案。

:::

## 如何选择组件 {#which-component-should-i-swizzle}

要精确选择实现目标所需的组件并非易事。提供大多数主题组件的`@docusaurus/theme-classic`包含约[100个组件](https://github.com/facebook/docusaurus/tree/main/packages/docusaurus-theme-classic/src/theme)！

:::tip

查看`@docusaurus/theme-classic`所有组件概览：

```bash npm2yarn
npm run swizzle @docusaurus/theme-classic -- --list
```

:::

可通过以下步骤定位目标组件：

1. **组件描述**。部分组件会提供简短描述，这是快速定位目标组件的有效方式。
2. **组件命名**。官方主题组件采用语义化命名，通常可通过名称推断功能。使用 swizzle CLI 时支持输入组件名片段进行筛选，例如运行 `yarn swizzle @docusaurus/theme-classic` 后输入 `Doc`，将仅列出与文档相关的组件。
3. **从高层级组件入手**。组件以树状结构相互引用，每个路由会关联一个顶级渲染组件（多数列于[内容插件路由](./advanced/routing.mdx#routing-in-content-plugins)）。例如所有博客文章页面的最顶层组件都是 `@theme/BlogPostPage`。可先对该组件进行 swizzle，再沿组件树向下定位具体目标组件。定位完成后请删除其他非必要组件文件，避免维护过多自定义组件。
4. **查阅[主题源码](https://github.com/facebook/docusaurus/tree/main/packages/docusaurus-theme-classic/src/theme)** 并善用搜索功能。

:::tip[直接提问！]

若仍无法确定应 swizzle 哪个组件来实现预期效果，可通过我们的[支持渠道](/community/support)寻求帮助。

我们也希望了解您更复杂的定制需求，欢迎[提交讨论](https://github.com/facebook/docusaurus/discussions/5468)。

:::

## 是否必须使用 swizzle？ {#do-i-need-to-swizzle}

Swizzle 意味着您需要维护与 Docusaurus 内部 API 交互的 React 代码。在定制站点时，请优先考虑以下替代方案：

1. **使用 CSS**。CSS 规则和选择器通常能实现相当程度的定制效果，详见[样式与布局](./styling-layout.mdx)。
2. **利用国际化机制**。虽然看似意外，但翻译本质上也是一种文本定制方式。例如当站点默认语言为 `en` 时，仍可运行 `yarn write-translations -l en` 后编辑生成的 `code.json` 文件，详见[i18n 教程](./i18n/i18n-tutorial.mdx)。

:::tip

**范围越小越好**。若必须使用 swizzle，请仅针对相关部分进行操作，尽量降低自主维护的代码量。小型组件的 swizzle 通常意味着升级时遭遇**破坏性变更**的风险更低。

相比[完全替换(ejecting)](#ejecting)，[包装(wrapping)](#wrapping)也是更安全的选择。

:::

## 使用 `<Root>` 包装站点 {#wrapper-your-site-with-root}

`<Root>` 组件位于 React 树结构的**最顶层**，在主题 `<Layout>` 之上且**永不卸载**，非常适合添加跨页面导航时需保持的状态逻辑（如用户认证状态、购物车状态等）。

通过创建 `src/theme/Root.js` 文件进行**手动** swizzle：

```js title="src/theme/Root.js"
import React from 'react';

// Default implementation, that you can customize
export default function Root({children}) {
  return <>{children}</>;
}
```

:::tip

可在此组件中渲染 React Context 提供者。

:::